Korjaa sovelluskuoren navigointiregressiot